# scaffold

./: .dockerignore  .gitignore  .pylintrc  .sops.yaml  .tool-versions  Dockerfile  Makefile  README.md  Tiltfile  entrypoint_app.py  entrypoint_celery.py  k3d-init.sh  k3d.yaml  pyproject.toml  pytest.ini  tilt_config.json
app/: __init__.py  auth.py  commands.py  config.py  errors.py  extensions.py  tasks.py  utils.py
app/api/: __init__.py  admin.py  healthz.py  models.py  schema.py  schema_docs.py  seed_test_db.py  types.py
app/templates/: custom_master.html  index.html  login.html  logout.html
app/templates/admin/: custom_user_create_view.html  index.html
deploy/: helm-deploy.sh
deploy/helm/: local.secrets.yaml  local.values.yaml
deploy/helm/scaffold/: Chart.yaml  values.yaml
deploy/helm/scaffold/templates/: _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-secrets.yaml  backend-service.yaml  backend-serviceaccount.yaml  flower-configmap.yaml  flower-deployment.yaml  flower-secrets.yaml  flower-service.yaml  flower-serviceaccount.yaml  ingress-middleware.yaml  ingress-routes.yaml  ui-deployment.yaml  ui-service.yaml  ui-serviceaccount.yaml
libs/sourcerer-utils/: pyproject.toml
libs/sourcerer-utils/sourcerer_utils/: __init__.py  dogstatsd.py  httpsession.py  logger.py
tests/: conftest.py  test_auth.py  test_cli.py  test_factory.py  test_models.py  test_routes.py  utils.py
tests/api/: test_customer.py  test_healthz.py
tests/fixtures/: __init__.py  legacy_database_seed.py
web/: Dockerfile  Makefile  README.md  nginx.conf  package.json  snowpack.config.js  web-test-runner.config.js
web/src/: App.svelte  App.test.js
web/src/pages/: Home.svelte
